--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             margin: 0;
         }
         </style>
-        <title>Transporte público Cali</title>
+        <title>GEOVISOR</title>
     </head>
     <body>
         <div id="map">
